fix: terms and conditions scrolling not working in ios. Removed overflow auto css property

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -291,12 +291,9 @@ hr {
 
 .styled-scrollbar,
 .styled-scrollbar ion-content {
-  --overflow: auto;
-
   scrollbar-color: #{$color-scrollbar-thumb} transparent; // Firefox
   scrollbar-width: thin; // Firefox
   -ms-overflow-style: auto;
-  overflow: auto;
 
   &::-webkit-scrollbar {
     display: block;
